RbA Build/src/objects/Back_Office_Check__c.object
<CustomObject>
    <description>Junction Object between the Back Office Checklist Configurations and Order.  Keeps the history of items that need to checked in order for the order move through the process.</description>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Back Office Checks</relationshipLabel>
        <relationshipName>Back_Office_Checks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Signed_Date__c</fullName>
        <inlineHelpText>Date the document was signed.</inlineHelpText>
        <label>Signed Date</label>
        <type>Date</type>
    </fields>
    <label>Back Office Check</label>
    <nameField>
        <label>Back Office Check Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Back Office Checks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SignedDateCannotBeFutureDate</fullName>
        <active>true</active>
        <description>User cannot save Back Office Check with a Signed Date in the future.</description>
        <errorConditionFormula>Signed_Date__c &gt; Today()</errorConditionFormula>
        <errorDisplayField>Signed_Date__c</errorDisplayField>
        <errorMessage>You cannot save this record with a Signed Date that is in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UserCannotUpdateCompletedCheckbox</fullName>
        <active>true</active>
        <description>Once Completed checkbox is checked the user cannot update the fields.  The user needs to contact their manager to update the field.</description>
        <errorConditionFormula>AND( 
PRIORVALUE(Completed__c), TRUE, 
ISCHANGED(Completed__c), 
$User.Update_Back_Office_Checklist_Fields__c &lt;&gt; TRUE)</errorConditionFormula>
        <errorDisplayField>Completed__c</errorDisplayField>
        <errorMessage>Once Completed checkbox is checked, you cannot update the field. Please create a task and assign it to your manager.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UserCannotUpdateSignedDate</fullName>
        <active>true</active>
        <description>Once Signed Date is populated, the user cannot update the field.  The user needs to contact their manager to update the field.</description>
        <errorConditionFormula>AND(
NOT(ISNEW()), 
TEXT((PRIORVALUE(Signed_Date__c )))&lt;&gt;&quot;&quot;, 
ISCHANGED( Signed_Date__c ),
$User.Update_Back_Office_Checklist_Fields__c &lt;&gt; TRUE)</errorConditionFormula>
        <errorDisplayField>Signed_Date__c</errorDisplayField>
        <errorMessage>Once Signed Date is populated, you cannot update the field. Please create a task and assign it to your manager.</errorMessage>
    </validationRules>
</CustomObject>